--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/UE23CS251B/mini-project/almao"]
 	path = src/UE23CS251B/mini-project/almao
 	url = https://github.com/polarhive/almao
+[submodule "src/UE23CS252B/mini-project/netmap-py"]
+	path = src/UE23CS252B/mini-project/netmap-py
+	url = https://github.com/polarhive/netmap-py
